[package]
name = "lazylifted"
version = "0.1.0"
authors = ["Ryan Wang <ryanxiaowang2001@gmail.com>"]
edition = "2021"
rust-version = "1.77.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
nom = "7.1.3"
nom-greedyerror = "0.5.0"
nom_locate = "4.1.0"
numpy = "0.21.0"
ordered-float = "4.2.0"
petgraph = { version = "0.6.4", features = ["serde-1"] }
priority-queue = "2.0.2"
pyo3 = { version = "0.21.2", features = ["auto-initialize", "serde"] }
ron = "0.8.1"
segvec = "0.2.0"
serde = { version = "1.0.199", features = ["derive"] }
strum = "0.26.2"
strum_macros = "0.26.2"
tempfile = "3.10.1"
thiserror = "1.0.59"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zip = "1.1.3"

[dev-dependencies]
serial_test = "3.1.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
overflow-checks = true
debug-assertions = false
lto = true
