[package]
name = "lazylifted"
version = "0.1.0"
authors = ["Ryan Wang <ryanxiaowang2001@gmail.com>"]
edition = "2021"
rust-version = "1.77.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
clap = { version = "4.5.11", features = ["derive"] }
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["history"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
ndarray = "0.16.0"
nom = "7.1.3"
nom-greedyerror = "0.5.0"
nom_locate = "4.1.0"
numpy = "0.21.0"
ordered-float = "4.2.2"
petgraph = { version = "0.6.5", features = ["serde-1"] }
priority-queue = "2.0.3"
pyo3 = { version = "0.21.2", features = ["auto-initialize", "serde"] }
ron = "0.8.1"
segvec = "0.2.0"
serde = { version = "1.0.207", features = ["derive"] }
smallvec = { version = "1.13.2", features = ["serde", "union"] }
strum = "0.26.3"
strum_macros = "0.26.4"
tempfile = "3.11.0"
thiserror = "1.0.63"
toml = "0.8.16"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zip = "2.1.5"

[dev-dependencies]
serial_test = "3.1.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
overflow-checks = true
debug-assertions = false
lto = true
